[tiendat] Add four beats demo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Test Sound</title>
 	<link rel="stylesheet" href="./css/bootstrap.css">	
+	<link rel="stylesheet" href="./css/sound-wave.css">
 </head>
 <style>
 	.title {
@@ -41,6 +42,7 @@
 			</div>
 			<div class="col-md-6">
 				<h2>Press Enter to Play</h2>
+				<h3>140bpm</h3>
 				<hr/>
 				<h2>Press 1 to Toggle Beat 1</h2>
 				<h2>Press 2 to Toggle Beat 2</h2>
